--- a/src/data/_site.en.yaml
+++ b/src/data/_site.en.yaml
@@ -2,5 +2,5 @@ name: PyCon2014China
 description: Python中国2014大会官方网站
 author: PyConChina@googlegroups.com
 url: http://cn.pycon.org/2014/
-home_url: "/"
+home_url: "/en/"
 base_url: ""
