尝试增补 全球 在线讲师,头像失常

--- a/src/data/_message.en.yaml
+++ b/src/data/_message.en.yaml
@@ -18,6 +18,7 @@ home_sponsors_hint: >
   <a href="http://pyconcn.qiniudn.com/zoomquiet/res/PyCon2014China-PersonSponsor-v140711.pdf">
   PyCon2014China-PersonSponsor-v140711.pdf</a></li>
   </ul>
+global: OnLine
 beijing: Beijing
 shanghai: Shanghai
 zhuhai: Zhuhai
