--- a/src/data/_proposals.cn.yaml
+++ b/src/data/_proposals.cn.yaml
@@ -1,4 +1,10 @@
 -
+  name: 魏泽人
+  city_global: 1
+  city: global
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/tw-wzren.jpg?imageMogr2/crop/!420x520a440a120|imageView2/2/w/150
+  intro: 东华应数副教授 PyCon APAC 2014 议程负责人 花莲.py 负责人
+-
   name: 李宽
   city_beijing: 1
   city: beijing
