--- a/src/data/_nav.en.yaml
+++ b/src/data/_nav.en.yaml
@@ -7,9 +7,9 @@
   - title: BEIJING
     url: "/en/"
   - title: SHANGHAI
-    url: "/en/"
+    url: "/en/shanghai.html"
   - title: ZHUHAI
-    url: "/en/schedule-zhuhai.html"
+    url: "/en/zhuhai.html"
 - title: SPONSORS
   url: "/en/sponsors.html"
 - title: VOLUNTEERS
