logo响应式布局，表格响应式布局，魔豆wifilogo迁移

--- a/src/data/_sponsors.cn.yaml
+++ b/src/data/_sponsors.cn.yaml
@@ -55,7 +55,7 @@
 -
   level_bronze: 1
   level: bronze
-  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/modowifi-logo.png?imageView2/2/h/60
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/mudou-logo.png?imageView2/2/w/160
   link: http://www.modouwifi.com/
   intro: 魔豆路由器是果壳电子于2014年6月5日发布的一款智能无线路由器。其配备了一块2.4英寸触控屏，用户可以通过这块屏幕，实现监控上网流量和设备状况，修改WiFi密码等功能。
 -
