--- a/src/data/_proposals.yaml
+++ b/src/data/_proposals.yaml
@@ -7,144 +7,185 @@
 -
   name: 李宽
   city_beijing: 1
-  city: beijing
+  city: 北京
+  city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/li-kuan.png?imageView2/2/h/80
-  intro: 
+  intro: 中科院微生物所,生物信息工程师
+  intro_en: Bioinformatics engineer, Institute of Microbiology, Chinese Academy of Sciences
 -
   name: 梁杰
   city_beijing: 1
-  city: beijing
+  city: 北京
+  city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/liang-jie-head.png?imageView2/2/h/80
   intro: 北京航空航天大学大四学生
+  intro_en: Senior student at Beihang University
 -
   name: 屈晓龙
   city_beijing: 1
-  city: beijing
+  city: 北京
+  city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
   intro: 北京信易云媒Python工程师
+  intro_en: Python engineer at Beijing Msgcopy
 -
   name: 郑堃
   city_beijing: 1
-  city: beijing
+  city: 北京
+  city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
   intro: 知道创宇程序员,客串项目经理. 擅长 Web 开发,从事的工作是 Web 安全相关产品的研发和管理. 信奉,现阶段成功的软件开发如果有所谓"银弹"的话,那只能是靠谱的团队(或者是说所谓的人件,湿件吧).
+  intro_en: Programmer and program manager of Knowsec, working on the R&D and management of the web security products
 -
   name: 林帅
   city_beijing: 1
-  city: beijing
+  city: 北京
+  city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
-  intro: Python 爱好者,目前就职于 scrapy 创始人的公司
--
-  name: ..
-  city_beijing: 1
-  city: beijing
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
-  intro: ...
+  intro: Python 爱好者,目前就职于 scrapy 创始人的公司, Seafile 项目核心开发者
+  intro_en: Python lover, working with the creator of scrapy.  Core developer of Seafile project.
 -
   name: 罗志城
   city_shanghai: 1
-  city: shanghai
+  city: 上海
+  city_en: Shanghai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
   intro: 北京正点时空科技有限公司研发经理
+  intro_en: R&D manager, Beijing Zhengdian Shikong Technology Limited Company
 -
   name: KJ
   city_shanghai: 1
-  city: shanghai
+  city: 上海
+  city_en: Shanghai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/KJ-head.png?imageView2/2/h/80
   intro: GDG上海创始人, 齐书CEO
+  intro_en: Founder of GDG Shanghai, CEO of Qishu.co
 -
   name: 徐涛
+  name_en: Xu Tao(徐涛)
   city_shanghai: 1
-  city: shanghai
+  city: 上海
+  city_en: Shanghai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/xu-tao_2_11_xtao.jpg?imageView2/2/h/80
   intro: 豆瓣Python 开发工程师.
+  intro_en: Python engineer at Douban
 -
   name: Adieu
   city_shanghai: 1
-  city: shanghai
+  city: 上海
+  city_en: Shanghai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
   intro: 2014年开始全职创业.
+  intro_en: Begin his full-time startup since 2014
 -
   name: 许智翔(Shell909090)
   city_shanghai: 1
-  city: shanghai
+  city: 上海
+  city_en: Shanghai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/Shell909090-lighting.png?imageView2/2/h/80
   intro: 现任七牛工程师,python/c程序员
+  intro_en: Engineering of Qiniu, Python and C programmer
 -
   name: 王剑峰
   city_shanghai: 1
-  city: shanghai
+  city: 上海
+  city_en: Shanghai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/jeff-openerp_14_11_jeff.png?imageView2/2/h/80
   intro: 致力于基于Python的OpenERP在中国的推广
+  intro_en: Devoting himself on the promotion of Python-based OpenERP in China
 -
   name: 叶剑烨
   city_shanghai: 1
-  city: shanghai
+  city: 上海
+  city_en: Shanghai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/ryan_500x500.jpg?imageView2/2/h/80
   intro: 之前在Slide和Google任技术经理,目前是Glow公司的CTO,也是公司的创始人之一
+  intro_en: CTO and co-founder of Glow, former technical manager of Slide and Google
 -
   name: 王安宇
   city_zhuhai: 1
-  city: zhuhai
+  city: 珠海
+  city_en: Zhuhai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/wang-an-yu-15_11_%E6%97%A0%E6%A0%87%E9%A2%98.png?imageView2/2/h/80
   intro: 深圳矽递科技(SeeedStudio)运营总监&CIO; Python爱好者,Raspberry Pi玩家
+  intro_en: "COO & CIO of Shengzhen Seeed Studio, Python lover, Raspberry Pi player"
 -
   name: 马全一
   city_zhuhai: 1
-  city: zhuhai
+  city: 珠海
+  city_en: Zhuhai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/ma-quan-yi_docker_7_11_meaglith_logo.png?imageView2/2/h/80
   intro: Docker 中文社区创始人
+  intro_en: Founder of Docker Chinese community
 -
   name: jeff
   city_zhuhai: 1
-  city: zhuhai
+  city: 珠海
+  city_en: Zhuhai
   avatar: http://pyconcn.qiniudn.com/images/speakers/131123_jeff.png?imageView2/2/h/80
   intro: 广州图锐信息科技创始人兼技术负责人,珠三角技术沙龙常务组委. 长年活跃在一线的python码农.
+  intro_en: Founder and tech leader of Guangzhou ToraySoft, organizer of  TechParty, Python coder
 -
   name: 陶文
   city_zhuhai: 1
-  city: zhuhai
+  city: 珠海
+  city_en: Zhuhai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
   intro: 在腾讯游戏运营部,使用python做运营开发. 曾经用python搞过电子商城,营销平台,手机代理程序等各类型应用
+  intro_en: Operation developer at Tencent Game, having used python to build e-mall, markerting platform, mobile proxy app, etc
 -
   name: 潘俊勇
   city_zhuhai: 1
-  city: zhuhai
+  city: 珠海
+  city_en: Zhuhai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/panjunyong_13_11_image.png?imageView2/2/h/80
   intro: Python老人,易度云办公 easydo.cn 创始人,前中国Zope/Plone社区推广者
+  intro_en: Python expert, founder of easydo.cn, former promoter of China Zope/Plone community
 -
   name: 吴章金
   city_zhuhai: 1
-  city: zhuhai
+  city: 珠海
+  city_en: Zhuhai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
   intro: MEIZU 工程师
+  intro_en: Engineer at MEIZU
 -
   name: 黄毅
   city_zhuhai: 1
-  city: zhuhai
+  city: 珠海
+  city_en: Zhuhai
   avatar: http://pyconcn.qiniudn.com/images/speakers/huangyi_1.jpeg?imageView2/2/h/80
   intro: 云悦科技技术合伙人,Python,Haskell爱好者,手游开发者.
+  intro_en: Technical co-founder of Yunyue Tech, Python & Haskell lover, mobile game developer
 -
   name: 翁伟(Wuvist)
   city_zhuhai: 1
-  city: zhuhai
+  city: 珠海
+  city_en: Zhuhai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/wuvist.jpg?imageView2/2/h/80
   intro: 80后创业者,今年沉迷于使用python生成Go源码
+  intro_en: Entrepreneurs, hooked on generating Go source code with python this year
 -
   name: 赖勇浩
   city_zhuhai: 1
-  city: zhuhai
+  city: 珠海
+  city_en: Zhuhai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/2013/static/images/speakers/laiyonghao.png?imageView2/2/h/80
   intro: 从业 8 年多,曾从事客户端游戏,网页游戏的研发,最近一年构建,带领团队开发基于 Web 技术的互联网,电话,自助终端销售彩票管理系统;开发食品,药品溯源系统等. 也是珠三角技术沙龙的创办人和组委之一.
+  intro_en: Working on the client game, web page game, etc., founder and organizer of Tech Party
 -
   name: 龙利民
   city_zhuhai: 1
-  city: zhuhai
+  city: 珠海
+  city_en: Zhuhai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
   intro: 猎豹移动,工程师
+  intro_en: Engineer of Cheetah Mobile
 -
   name: 温铭
   city_zhuhai: 1
-  city: zhuhai
+  city: 珠海
+  city_en: Zhuhai
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/wenmin-16_11_psb.jpg?imageView2/2/h/80
   intro: 旧金山人,曾负责水银云查杀和反钓鱼的开发
+  intro_en: San Franciso developer, former leader of the development of Mecury cloud killing and anti-phishing
