--- a/src/data/_site.yaml
+++ b/src/data/_site.yaml
@@ -1,6 +1,8 @@
 name: PyCon2014China
 description: Python中国2014大会官方网站
+description_en: The official site for PyCon China 2014
 author: PyConChina@googlegroups.com
 url: http://cn.pycon.org/2014/
-home_url: "/en/"
+home_url: "/"
+home_url_en: "/en/"
 base_url: ""
