--- a/src/data/_volunteers.yaml
+++ b/src/data/_volunteers.yaml
@@ -31,6 +31,14 @@
   weibo: http://weibo.com/coytoe
   github: https://github.com/chencoyote
 -
+  name: zijing07(赵紫晶)
+  role: technician
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/2013/static/images/speakers/nopic.gif?imageView2/2/h/80
+  role_technician: 1
+  intro: 同济大学软件学院研究生二年级；热爱Python，任何事情都想先用Python解决；热爱并善于与人交流，喜爱和人合作；喜欢了解各种技术，梦想计算机改善大家的生活。
+  weibo: http://weibo.com/coderzhao
+  github: https://github.com/zijing07
+-
   name: ...
   role: technician
   avatar: http://pyconcn.qiniudn.com/zoomquiet/2013/static/images/speakers/nopic.gif?imageView2/2/h/80
