try site.yaml的baseurl改成 2014 但是...

--- a/src/data/_site.yaml
+++ b/src/data/_site.yaml
@@ -5,4 +5,4 @@ author: PyConChina@googlegroups.com
 url: http://cn.pycon.org/2014/
 home_url: "/"
 home_url_en: "/en/"
-base_url: ""
+base_url: "2014"
