--- a/src/data/_site.yaml
+++ b/src/data/_site.yaml
@@ -3,6 +3,7 @@ description: Python中国2014大会官方网站
 description_en: The official site for PyCon China 2014
 author: PyConChina@googlegroups.com
 url: http://cn.pycon.org/2014/
-home_url: "/"
-home_url_en: "/en/"
-base_url: "2014"
+home_url: "./"
+home_url_en: "../en/"
+base_url: "."
+base_url_en: ".."
