--- a/src/data/_nav.yaml
+++ b/src/data/_nav.yaml
@@ -33,9 +33,9 @@
   title_en: HISTORY
   children:
   - title: '2011'
-    url: "http://cn.pycon.org/2011"
+    url: "/2011"
   - title: '2012'
-    url: "http://cn.pycon.org/2012"
+    url: "/2012"
   - title: '2013'
     url: "http://cn.pycon.org/2013"
 - title: EN
