--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -73,6 +73,6 @@
 -
   level_bronze: 1
   level: bronze
-  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/Qisense-logo.svg
+  logo: http://www.qisense.com/elements/logo-black.png
   link: http://www.qisense.com/#about
   intro: 七感 使复杂的数据简单化/利用高级数学理论和统计模型进行分析计算/向用户提供及时的，有价值的，可执行的信息
