--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -64,7 +64,7 @@ venue_en: Venue
 traffic: 交通
 traffic_en: Traffic
 morning: 上午
-morning_en: Moring
+morning_en: Morning
 noon: 中午
 noon_en: Noon
 afternoon: 下午
