--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -23,7 +23,16 @@ home_intro: >
   第四届 PyConChina 大会. 本次大会由CPyUG,GDG,TopGeek在
   上海,北京,珠海,杭州,苏州同时举办.<ul>
   <li><strong><a href="/proposals.html">主题/工作坊提交入口</a></strong></li>
-  <li>参会报名,预计 10 月下旬发布,敬请期待</li>
+  <li>门票级别: <ul>
+  <li>0RMB    学生票,嘦带学生证来即可免费入场</li>
+  <li>100RMB  普通票,包含所有礼品和午餐 <b>注意: 11月1日之前</b>购买为<b>50RMB</b></li>
+  <li>200RMB  企业票,包含发票</li>
+  </ul></li>
+  <li>报名入口:<i>(苏/杭 只有半天,全部免费)</i><ul>
+  <li><a href="http://19wu.com/PyConShanghai"/>上海报名链接</a></li>
+  <li><a href="http://19wu.com/PyConBeijing"/>北京报名链接</a></li>
+  <li><a href="http://19wu.com/PyConZhuhai"/>珠海报名链接</a></li>
+  </ul></li>
   </ul>
 home_intro_en: > 
   PyCon, the party of world-wide pythoneers!
