--- a/src/data/_schedule_zhuhai.yaml
+++ b/src/data/_schedule_zhuhai.yaml
@@ -66,8 +66,8 @@ pm:
     topic_en: 花蓮.py community story
     speaker:  魏泽人
     speaker_en: 魏泽人 (weijr)
-    preview: [从台湾网络直播] 如何在没有人用 Python 的偏乡,建立 Python 社区的一些小小经验.这三四年参与开源社区活动,并尝试将从社区学到的经验,回馈到地方.
-    preview_en: [online from TW] How did build Python community in partial Township without Python user? These three or four years to participate in the open source community, and try to learn from the experience of the community, to contribute to the place.
+    preview: (从台湾网络直播)如何在没有人用 Python 的偏乡,建立 Python 社区的一些小小经验.这三四年参与开源社区活动,并尝试将从社区学到的经验,回馈到地方.
+    preview_en: (online from TW) How did build Python community in partial Township without Python user? These three or four years to participate in the open source community, and try to learn from the experience of the community, to contribute to the place.
   - time: "~ 15:10 "
     topic: 间歇
     topic_en: Intermission
