--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -74,5 +74,5 @@
   level_bronze: 1
   level: bronze
   logo: http://www.qisense.com/elements/logo-black.png
-  link: http://www.qisense.com/#about
-  intro: 七感 使复杂的数据简单化/利用高级数学理论和统计模型进行分析计算/向用户提供及时的，有价值的，可执行的信息
+  link: http://www.qisense.com/
+  intro: 七感科技 (Qisense) 将复杂的数据简单化，旨在从海量数据中智能提炼重要信息。我们利用高级数学理论和统计模型进行分析计算，通过数据可视化向用户推送及时的，有价值的，并且可执行的商业情报。
