--- a/src/data/_schedule_beijing.yaml
+++ b/src/data/_schedule_beijing.yaml
@@ -1,53 +1,84 @@
 address: 待定
+address_en: TBD
 venue: 待定
+venue_en: TBD
 traffic: 待定
+traffic_en: TBD
 notices:
 am:
   - time: "09:00"
     topic: "签到 & 开场"
+    topic_en: "Check-in & Opening"
     speaker:
     preview:
   - time: ""
     topic: Python 在知道创宇的应用--- 软件构建实践分享
+    topic_en: Application of Python at KNOWNSEC -- Sharing on Software Construction
     speaker: 郑堃
+    speaker_en: 郑堃 (Zheng Kun)
     preview: Python 都用在了哪些类型的开发上;代码管理的实践;单元测试的实践;code review 的实践;包管理/构建发布的实践;持续集成的实践;等等软件构件中涉及的大小主题. 部分内容已经分享到了:http://pm.readthedocs.org/
+    preview_en: What softwares are using Python; Code Management; Unit Test; Code Review; Module Management/Deploy; Continuous Integration and so on. Some have been shared on http://pm.readthedocs.org/
   - time: ""
     topic: "How CODE works"
-    speaker: 徐涛 
+    speaker: 徐涛
+    speaker_en: 徐涛 (Xu Tao)
     preview: 介绍豆瓣的 CODE 的内部机制,一个 GitHub 的 Copy. CODE 是基于 Python 的应用,介绍一下具体的技术实现,与开发过程的一些经验.
+    preview_en: Introduce how douban.com manages codes using CODE, a copy of Github. CODE is developed by Python, the lecture will mainly focus on the implementation of CODE, and experience during the development process.
 noon:
   - time: "12:00"
     topic: 午餐+合照
+    topic_en: Lunch + Photo
     speaker:
     preview:
 pm:
   - time: "13:00"
     timespan: 45'
     topic: 花蓮.py 社区体验
+    topic_en: 花蓮.py community story (hualien.python.org.tw)
     speaker: 魏泽人
+    speaker_en: 魏泽人 (weijr)
     preview: 我的开源体验，如何在没有人用 Python 的偏乡，建立 Python 社区的一些小小经验。 这三四年参与开源社区活动，并尝试将从社区学到的经验，回馈到地方。
+    preview_en: (online from TW) How did build Python community in partial Township without Python user? These three or four years to participate in the open source community, and try to learn from the experience of the community, to contribute to the place.
   - time: ""
     topic: "工作坊"
+    topic_en: "Workshop"
     speaker: 林帅
+    speaker_en: 林帅 (Lin Shuai)
     preview: 现场教大家用 Scrapy 框架做网络爬虫,以及面向开发者的网络爬虫 PaaS - ScrapyCloud. 具体内容包括从最开始怎么写爬虫,到用一个 SAE 上的应用来展示爬虫获取的数据. 最后如果时间允许可以再简单介绍一下不用写代码的自动爬虫工具 Auto-Scraping.
+    preview_en: Make a web crawler with Scrapy. Introduce ScrapyCloud, a developer-oriented PaaS. From how to start programming a crawler, to display the collected data on SAE. Talking about Auto-Scraping.
+    
 lt:
   - time: ""
     topic: 生物领域的大数据和Python
+    topic_en: Python and big data in biology
     speaker: 李宽
+    speaker_en: 李宽 (Li Kuan)
     preview: 简单介绍一下python在生物领域大数据分析中的应用.
+    preview_en: Introduce the application of Python in biology big data.
   - time: ""
     topic: 如何阅读Python 代码
+    topic_en: How to read Python codes
     speaker: 梁杰
-    preview: Python以其多种多样的第三方库闻名于世,许多程序员经过一段时间的学习都可以掌握这些库,但是掌握了之后,自己的水平就遇到了瓶颈,无法继续提高. 阅读源码则是一种简单粗暴,人人都可以使用的技术进阶方法,但是在我实际的学习过程中以及和周围朋友的交流中发现,很多人不敢阅读源码,很多人不想阅读源码,很多人不懂到底该如何阅读源码. 然而,要想真正的提升自己,成为一个优秀的程序员,阅读源码是必由之路. 我想和大家分享的就是我自己在阅读源码过程中总结的一些经验和方法,希望对大家的技术提升有所帮助. 
+    speaker_en: 梁杰 (Liang Jie)
+    preview: Python以其多种多样的第三方库闻名于世,许多程序员经过一段时间的学习都可以掌握这些库,但是掌握了之后,自己的水平就遇到了瓶颈,无法继续提高. 阅读源码则是一种简单粗暴,人人都可以使用的技术进阶方法,但是在我实际的学习过程中以及和周围朋友的交流中发现,很多人不敢阅读源码,很多人不想阅读源码,很多人不懂到底该如何阅读源码. 然而,要想真正的提升自己,成为一个优秀的程序员,阅读源码是必由之路. 我想和大家分享的就是我自己在阅读源码过程中总结的一些经验和方法,希望对大家的技术提升有所帮助.
+    preview_en: Python is famouse for its sufficient third-party modules. Programmers can learn a lot from reading the source code. However, it is hard to read source code. This lecture will focus on the recommending methods of reading source code.
   - time: ""
     topic: ""
     speaker: 屈晓龙
+    speaker_en: 屈晓龙 (Qu Xiaolong)
     preview: 简单介绍如何使用Python+JavaScript+Html+Css搭建类似于PhoneGap的轻量级,定制化的混合应用框架.
+    preview_en: Construct an application framework like PhoneGap with Python+Javascript+Html+Css.
   - time: ""
     topic: QPython - 安卓上的Python
+    topic_en: QPython - Python on Android
     speaker: 曲池峰
+    speaker_en: 曲池峰 (Qu Chifeng)
     preview: 介绍QPython，如何在手机和平板上写Python程序，在手机上用Python写出实用的脚本程序，随时随地写程序。
+    preview_en: Introduce QPython. How to write useful Python on phone and tablet.
   - time: ""
     topic: redis-mgr 介绍
+    topic_en: Introduce redis-mgr
     speaker: 杨林
-    preview: 是一个用python开发的redis集群管理工具,用redis-mgr可以快速(10min)搭建一个由redis/twemproxy/redis-sentinel 构成的redis 集群.   功能包括 一键式部署, failover, 监控, 实例迁移, 模块升级等.  github.com/idning/redis-mgr  
+    speaker_en: 杨林 (Yang Lin)
+    preview: 是一个用python开发的redis集群管理工具,用redis-mgr可以快速(10min)搭建一个由redis/twemproxy/redis-sentinel 构成的redis 集群.   功能包括 一键式部署, failover, 监控, 实例迁移, 模块升级等.  github.com/idning/redis-mgr
+    preview_en: redis-mgr is a cluster management tool. A redis cluster can be set up in 10 min with redis-mgr, consisting of redis/twemproxy/redis-sentinel. Features are quick deployment, failover, monitor, instance migrate, module update.  github.com/idning/redis-mgr
