--- a/src/data/_volunteers.yaml
+++ b/src/data/_volunteers.yaml
@@ -11,7 +11,7 @@
   role: organizer
   role_organizer: 1
   avatar: http://pyconcn.qiniudn.com/images/volunteer/zhouqi.png?imageView2/2/h/80
-  intro: Python 中文社区创始人 / 管理员,热心于python社区的公益事业,大家熟知的社区"大妈";OBP及蟒营工程设计者 /主持人;参与并主持各种线上 / 线下活动,主持编撰了<>;坚持用 Pythonic 感化国人进入 FLOSS世界进行学习 / 分享 / 创造!目前就职于金山软件.
+  intro: Python 中文社区创始人 / 管理员,热心于python社区的公益事业,大家熟知的社区"大妈";OBP及蟒营工程设计者 /主持人;参与并主持各种线上 / 线下活动,主持编撰了《可爱的Python》;坚持用 Pythonic 感化国人进入 FLOSS世界进行学习 / 分享 / 创造!目前就职于金山软件.
   blog: http://blog.zoomquiet.io/
   weibo: http://weibo.com/zoomquiet
 -
