--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -4,75 +4,88 @@
   logo: http://pyconcn.qiniudn.com/images/sponsors/google.png?imageView2/2/w/320
   link: http://www.google.com
   intro: Google是一家以提供搜索服务,并向企业客户提供广告服务为重点的盈利公司. Google以其搜索迅速,准确,容易使用等特点,被公认为是世界最佳搜索引擎.
+  intro_en: Google is an American multinational corporation specializing in Internet-related services and products. These include online advertising technologies, search, cloud computing, and software.
 -
   level_platinum: 1
   level: platinum
   logo: http://pyconcn.qiniudn.com/images/companies/SC.png?imageView2/2/w/280
   link: http://www.speedycloud.cn/
   intro: SpeedyCloud是业界领先的云计算服务提供商迅达云成公司旗下品牌,专注于为企业提供互联网及企业IT相关基础设施云服务. 公司成员绝大多数来自于蓝汛,世纪互联等IT运维服务型上市企业, 利用最新的云计算及互联网技术帮助客户迅速扩展在线业务.
+  intro_en: SpeedyCloud is the IaaS brand owned by Beijing SpeedyCloud Technology Co., Ltd.,, who is one of the leaders in cloud industry.The company was setup in 2012, with the capital of 10 million RMB invested all by ourselves.Being the general solution provider,  our focus is to provide IaaS for Internet and enterprises companies. Most of the team came from public IT operating and service companies like ChinaCache, 21ViaNet, etc. We are helping our customers with the most cutting-edge cloud computing technologies to expand their online businesses. 
 -
   level_gold: 1
   level: gold
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/cmcm-logo.png?imageView2/2/w/200
   link: http://www.cmcm.com
   intro: 猎豹移动致力为全球用户提供更快速,更简单,更安全的网络及行动上网体验. 截止到2014年2月，猎豹移动拥有了超过3亿4千万的月活跃用户，旗下的产品品牌包括：Clean Master, CM Security, Battery Doctor 和Duba Anti-virus,为全球用户的移动互联网提供了更加快速、便捷并且安全的体验。根据 iResearch统计，截止到2014年2月，按照月活跃用户数量计算，猎豹移动已然是中国第二大互联网安全软件厂商。同时，根据App Annie的统计，在2014年3月，Clean Master已经是Google Play全球工具类别月下载排名第一位的app。
+  intro_en: Cheetah Mobile is a leading mobile internet company with more than 340 million monthly active users as of February 2014. Its mission critical applications, including Clean Master, CM Security, Battery Doctor and Duba Anti-virus, help make the internet and mobile experience speedier, simpler, and safer for users worldwide. Cheetah Mobile is the second largest internet security software provider in China by monthly active users as of February 2014, according to iResearch, and the publisher of Clean Master, the NO.1 mobile app in the Google Play Tools category worldwide by monthly downloads in March 2014, according to App Annie.
 -
   level_gold: 1
   level: gold
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/logo_gitcafe_2013.png?imageView2/2/w/200
   link: https://gitcafe.com/
   intro: GitCafe 是一个基于代码托管服务打造的技术协作与分享平台,帮助研发团队更好地进行项目与代码的管理与协作,为企业提供优化的工作流程与解决方案;同时助力国内外 IT 企业打造更好的开发者生态系统,获得强有力的企业级技术推广平台.
+  intro_en: GitCafe is the online platform for you to host your projects.GitCafe is the most popular version control system on this planet. It's free, opensource and easy for personal or team to use.
 -
   level_gold: 1
   level: gold
   logo: http://pyconcn.qiniudn.com/images/sponsors/csdn.gif?imageView2/2/w/200
   link: http://www.csdn.net/
   intro: CSDN创立于1999年,是中国最大的中文IT知识服务集团,专注IT信息传播,技术交流,教育培训和专业技术人才服务. 拥有超过1800万注册会员,10000名CTO,50万注册企业及合作伙伴,全球中文网站排名第27位. 长期以来,CSDN以技术视角关注IT产业发展,以深度分享推进产业技术成长,致力于弘扬技术创新,倡导分享,开放和协作,努力打造高质量的中文IT技术交流平台.
+  intro_en: Founded in 1999, CSDN is the largest community website and services platform in China. We are the lifetime partner of software developers and IT Pros in China, serving them with Knowledge, Career and Development services to meet their fundamental needs of Learning, Networking, and Programming during their growth lifecycle. CSDN has more than 24 million registered users (8 million active monthly users) and 500,000 enterprises as partnership members. CSDN ranks No.39 (No.27 at peak) among all China websites(Alexa)
 -
   level_gold: 1
   level: gold
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/douban-logo.png?imageView2/2/w/200
   link: http://www.douban.com/
   intro: 豆瓣成立于2005年3月,目前已拥有5,300多万注册用户. 豆瓣一直致力于帮助都市人群发现生活中有用的事物,通过书影音,小组,小站,同城,豆瓣说等多产品及相关移动应用来服务都市生活的不同领域.
+  intro_en: Douban.com launched on March 6, 2005, is a Chinese SNS website allowing registered users to record information and create content related to film, books, music, and recent events and activities in Chinese cities. 
 -
   level_gold: 1
   level: gold
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/qiniu-logo.png?imageView2/2/h/80
   link: http://www.qiniu.com/
   intro: 七牛云存储由国内存储行业的领军人物之一许式伟于2011年创立，致力于提供最适合开发者的数据在线托管、传输加速以及云端处理的服务。
+  intro_en: qiniu cloud storage by domestic industry one of the leading Xu Shiwei was founded in 2011, Committed to providing the most suitable for developers of online hosting, transmission speed, and the cloud data processing services.
 -
   level_gold: 1
   level: gold
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/upyun-Logo-h200.png?imageView2/2/w/180
   link: https://www.upyun.com/index.html
   intro: 又拍云存储是杭州又拍云科技有限公司旗下项目，成立于2005年6月，前期主要为又拍网、又拍图片管家提供图片云存储／云计算服务，于2010年2月对所有用户开放使用。
+  intro_en: upyun cloud storage is hangzhou youpai technology co., LTD's project, was founded in June 2005, the early main take yupoo.com, and v.yupoo.com , in February 2010 is open to all users to use.
 -
   level_silver: 1
   level: silver
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/coding_logo.png?imageView2/2/h/70
   link: https://coding.net/home.html
   intro: Coding 是一个面向开发者的云端开发平台，目前提供代码托管，运行空间，质量控制，项目管理等功能。Coding 提供社会化协作功能，包含了社交元素，为开发者提供技术讨论和协作平台。
+  intro_en: Coding is a cloud development platform for developers, Provide code hosting, space operation, quality control, project management, etc., Coding provide social collaboration capabilities, including the SNS to provide developers with technical discussion and collaboration platform.
 -
   level_bronze: 1
   level: bronze
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/mudou-logo.png?imageView2/2/w/160
   link: http://www.modouwifi.com/
   intro: 魔豆路由器是果壳电子于2014年6月5日发布的一款智能无线路由器。其配备了一块2.4英寸触控屏，用户可以通过这块屏幕，实现监控上网流量和设备状况，修改WiFi密码等功能。
+  intro_en: Modou wifi is GEAK released on June 5, 2014, a smart wireless router. It is equipped with a 2.4 -inch touch screen, the user can through the screen, to realize to monitor Internet traffic and equipment status, modify the WiFi password and etc..
 -
   level_bronze: 1
   level: bronze
   logo: http://pyconcn.qiniudn.com/images/sponsors/yidu.gif?imageView2/2/h/80
   link: http://everydo.com/common/about.rst
   intro: 广州润普网络科技有限公司( http://zopen.cn )自2002年成立以来,立足于开放源代码软件的专业技术开发与服务. 为客户提供基于Zopen/Plone等开放源代码软件的企业内容管理,项目管理,文档管理,知识管理和产品解决方案,提供信息系统咨询,开发,支持等服务,以及Zopen/Plone的培训服务.
+  intro_en: ZOpen.cn, are a Zope and Plone based opensource Content Management solution provider located in Shanghai, China. Our company came into existance at Ferbrary, 2003. We are a technology-based company.
 -
   level_bronze: 1
   level: bronze
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/duitang-logo.png?imageView2/2/h/60
   link: http://www.duitang.com/
   intro: 堆糖,堆积生活中的一切美好，帮你收集和组织你喜欢的图片与物品。你可以用堆糖收集网络上你喜欢的图片和商品，保存你的设计灵感、计划你的旅行、准备你的换季购物清单, 而这一切只需要你动动鼠标，开始使用堆糖。
+  intro_en: Duitang means to collect all the good things in life, It can help you collect and organize your favorite photos and articles. You can use duitang collect picture you like on the network and goods, save your design inspiration, plan your trip, prepare your seasonal shopping list, And all this only need to click your mouse begin to use duitang.
 -
   level_bronze: 1
   level: bronze
   logo: http://www.qisense.com/elements/logo-black.png
   link: http://www.qisense.com/
   intro: 七感科技 (Qisense) 将复杂的数据简单化，旨在从海量数据中智能提炼重要信息。我们利用高级数学理论和统计模型进行分析计算，通过数据可视化向用户推送及时的，有价值的，并且可执行的商业情报。
+  intro_en: Qisense can simplifying complex data , Aimed at intelligent extract important information from the huge amounts of data. We use advanced mathematical theory and statistical models for analysis and calculation, To the user through data visualization push timely and valuable, executable business intelligence.
