--- a/src/data/_proposals.yaml
+++ b/src/data/_proposals.yaml
@@ -170,7 +170,7 @@
   city_zhuhai: 1
   city: 珠海
   city_en: Zhuhai
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/2013/static/images/speakers/laiyonghao.png?imageView2/2/h/80
+  avatar: http://pyconcn.qiniudn.com/images/speakers/laiyonghao.png
   intro: 从业 8 年多,曾从事客户端游戏,网页游戏的研发,最近一年构建,带领团队开发基于 Web 技术的互联网,电话,自助终端销售彩票管理系统;开发食品,药品溯源系统等. 也是珠三角技术沙龙的创办人和组委之一.
   intro_en: Working on the client game, web page game, etc., founder and organizer of Tech Party
 -
