--- a/src/data/_schedule_beijing.yaml
+++ b/src/data/_schedule_beijing.yaml
@@ -31,7 +31,7 @@ noon:
     speaker:
     preview:
 pm:
-  - time: "13:00"
+  - time: "14:30~15:00 !!!"
     timespan: 45'
     topic: 花蓮.py 社区体验
     topic_en: 花蓮.py community story (hualien.python.org.tw)
