--- a/src/data/_schedule_beijing.yaml
+++ b/src/data/_schedule_beijing.yaml
@@ -1,8 +1,8 @@
-address: 待定
+address: 中国科学院中关村园区教学楼
 address_en: TBD
-venue: 待定
+venue: S201教室
 venue_en: TBD
-traffic: 待定
+traffic: (北四环保福寺桥南恒兴大厦向西200米) 
 traffic_en: TBD
 notices:
 am:
