--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -33,6 +33,7 @@ home_intro: >
   <li><a href="http://19wu.com/PyConBeijing"/>北京报名链接</a></li>
   <li><a href="http://19wu.com/PyConZhuhai"/>珠海报名链接</a></li>
   </ul></li>
+  <li>联系大会: <a href="mailto:support@pychina.org?subject=ask-PyCon2014China">support@pychina.org</a> </li> 
   </ul>
 home_intro_en: > 
   PyCon, the party of world-wide <a href="volunteers.html#pythoneer">Pythoneer</a>!
@@ -52,6 +53,7 @@ home_intro_en: >
   <li><a href="http://19wu.com/PyConBeijing"/>Beijing Sign Up Link</a></li>
   <li><a href="http://19wu.com/PyConZhuhai"/>Zhuhai Sign Up Link</a></li>
   </ul></li>
+  <li>Contact: <a href="mailto:support@pychina.org?subject=ask-PyCon2014China">support@pychina.org</a> </li> 
   </ul>
 home_sponsors: 大会赞助 
 home_sponsors_en: Sponsors 
