update footer and some translation

--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -29,9 +29,9 @@ home_intro: >
   <li>200RMB  企业票,包含发票</li>
   </ul></li>
   <li>报名入口:<i>(苏/杭 只有半天,全部免费)</i><ul>
-  <li><a href="http://19wu.com/PyConShanghai"/>上海报名链接</a></li>
-  <li><a href="http://19wu.com/PyConBeijing"/>北京报名链接</a></li>
-  <li><a href="http://19wu.com/PyConZhuhai"/>珠海报名链接</a></li>
+  <li><a href="http://19wu.com/PyConShanghai">上海报名链接</a></li>
+  <li><a href="http://19wu.com/PyConBeijing">北京报名链接</a></li>
+  <li><a href="http://19wu.com/PyConZhuhai">珠海报名链接</a></li>
   </ul></li>
   <li>联系大会: <a href="mailto:support@pychina.org?subject=ask-PyCon2014China">support@pychina.org</a> </li> 
   </ul>
@@ -49,9 +49,9 @@ home_intro_en: >
   <li>200RMB  Enterprise, Invoice included.</li>
   </ul></li>
   <li>Sign Up:<i>(Half day at Suzhou/Hangzhou, both for free)</i><ul>
-  <li><a href="http://19wu.com/PyConShanghai"/>Shanghai Sign Up Link</a></li>
-  <li><a href="http://19wu.com/PyConBeijing"/>Beijing Sign Up Link</a></li>
-  <li><a href="http://19wu.com/PyConZhuhai"/>Zhuhai Sign Up Link</a></li>
+  <li><a href="http://19wu.com/PyConShanghai">Shanghai Sign Up Link</a></li>
+  <li><a href="http://19wu.com/PyConBeijing">Beijing Sign Up Link</a></li>
+  <li><a href="http://19wu.com/PyConZhuhai">Zhuhai Sign Up Link</a></li>
   </ul></li>
   <li>Contact: <a href="mailto:support@pychina.org?subject=ask-PyCon2014China">support@pychina.org</a> </li> 
   </ul>
