应要求调整赞助商演讲

--- a/src/data/_schedule_hangzhou.yaml
+++ b/src/data/_schedule_hangzhou.yaml
@@ -1,7 +1,7 @@
-address: 待定
-address_en: TBD
-venue: 待定
-venue_en: TBD
+address: 杭州市滨江区江南大道‎ 
+address_en: 杭州市滨江区江南大道‎
+venue: 诺基亚通信杭州全球研发中心
+venue_en: 诺基亚通信杭州全球研发中心
 traffic: 待定
 traffic_en: TBD
 notices: 是也乎 ..
