--- a/src/data/_proposals.yaml
+++ b/src/data/_proposals.yaml
@@ -5,6 +5,9 @@
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/tw-wzren.jpg?imageMogr2/crop/!420x520a440a120|imageView2/2/w/150
   intro: 东华应数副教授 PyCon APAC 2014 议程负责人 花莲.py 负责人 ; Open Source Projects xnes/JavaScript SNES Emulator, translatePDF /pdf 简体繁体转换, ck101fs, ASUSWebStorage FS, snes9x-3d, Mental Poker  ; Past Projects WebKitGtkKindleDXG, 梦入神蛋, XA+CV, ZBochs, KindleChewing, JavaScript PCSX emulator, 坏狗不道德搜寻...
   intro_en: Associate Professor of Applied Mathematics, Donghua University ; PyCon APAC 2014 Agenda responsible person; founder of Hualien.py ; Open Source Projects xnes /JavaScript SNES Emulator, translatePDF /pdf 简体繁体转换, ck101fs, ASUSWebStorage FS, snes9x-3d, Mental Poker;  Past Projects WebKitGtkKindleDXG, 梦入神蛋, XA+CV, ZBochs, KindleChewing, JavaScript PCSX emulator, 坏狗不道德搜寻...
+#########################################
+#   帝都
+#########################################
 -
   name: 李宽
   city_beijing: 1
@@ -45,6 +48,9 @@
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
   intro: Python 爱好者,目前就职于 scrapy 创始人的公司, Seafile 项目核心开发者
   intro_en: Python lover, working with the creator of scrapy.  Core developer of Seafile project.
+#########################################
+#   魔都
+#########################################
 -
   name: 罗志城
   city_shanghai: 1
@@ -102,6 +108,9 @@
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/ryan_500x500.jpg?imageView2/2/h/80
   intro: 之前在Slide和Google任技术经理,目前是Glow公司的CTO,也是公司的创始人之一
   intro_en: CTO and co-founder of Glow, former technical manager of Slide and Google
+#########################################
+#   珠三角
+#########################################
 -
   name: 王安宇
   city_zhuhai: 1
@@ -190,3 +199,41 @@
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/wenmin-16_11_psb.jpg?imageView2/2/h/80
   intro: 旧金山人,曾负责水银云查杀和反钓鱼的开发
   intro_en: San Franciso developer, former leader of the development of Mecury cloud killing and anti-phishing
+#########################################
+#   苏州
+#########################################
+#########################################
+#   杭州
+#########################################
+-
+  name: Hepo Chen
+  city_hangzhou: 1
+  city: 杭州
+  city_en: Hangzhou
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/HepoChen.jpg?imageView2/2/h/80
+  intro: FarBox的创始人，流浪在代码一线的产品经理
+  intro_en: 
+-
+  name: 施远敏
+  city_hangzhou: 1
+  city: 杭州
+  city_en: Hangzhou
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
+  intro: 诺基亚通信的资深技术专家，软件研发教练
+  intro_en: 
+-
+  name: 令狐虫
+  city_hangzhou: 1
+  city: 杭州
+  city_en: Hangzhou
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
+  intro: SFIT资深软件工程师，BT群核心成员， g4pcc发起人
+  intro_en: 
+-
+  name: 李枫
+  city_hangzhou: 1
+  city: 杭州
+  city_en: Hangzhou
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/id/nopic.gif?imageView2/2/h/80
+  intro: 在手机相关研发领域已有近11年工作经验，先后在摩托罗拉，三星等IT企业工作，现就职于阿里巴巴。
+  intro_en: 
