--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -26,7 +26,7 @@ home_intro: >
   <strong><a href="http://PyCon.org">PyCon.org</a></strong>授权中国举办
   第四届 PyConChina 大会. 本次大会由CPyUG,GDG,TopGeek在
   上海,北京,珠海,杭州,苏州同时举办.<ul>
-  <li><strong><a href="/2014/proposals.html">主题/工作坊提交入口</a></strong></li>
+  <li><strong><a href="/proposals.html">主题/工作坊提交入口</a></strong></li>
   <li>门票级别: <ul>
   <li>0RMB    学生票,嘦带学生证来即可免费入场</li>
   <li>100RMB  普通票,包含所有礼品和午餐 <b>注意: 11月1日之前</b>购买为<b>50RMB</b></li>
@@ -50,7 +50,7 @@ home_intro_en: >
   this is the fourth year of <code>PyConChina</code>.
   It is organized by CPyUG/GDG/TopGeek,
   and held simultaneously in <strong>Shanghai/Beijing/Zhuhai/Shenzhen</strong>!<ul>
-  <li><strong><a href="/2014/en/proposals.html">Topic/Workshop Submit Entrance</a></strong></li>
+  <li><strong><a href="/en/proposals.html">Topic/Workshop Submit Entrance</a></strong></li>
   <li>Tickets <ul>
   <li>0RMB    Students, Enter the meeting for free with your student ID card.</li>
   <li>100RMB  Normal, All gifts and lunch included. <b>Notice: Buy before 11.1 (Nov 1st)</b> for <b>50RMB</b></li>
