--- a/src/data/_nav.yaml
+++ b/src/data/_nav.yaml
@@ -2,7 +2,7 @@
   title_en: HOME
   url: "index.html"
   url_en: "en/index.html"
-- title: 报名
+- title: 演讲提交
   title_en: PROPOSALS
   url: "proposals.html"
   url_en: "en/proposals.html"
