--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -15,6 +15,10 @@ page_title_volunteers: 志愿
 page_title_volunteers_en: Volunteers
 page_title_zhuhai: 珠海日程
 page_title_zhuhai_en: Schedule in Zhuhai
+page_title_suzhou: 苏州日程
+page_title_suzhou_en: Schedule in Suzhou
+page_title_hangzhou: 杭州日程
+page_title_hangzhou_en: Schedule in Hangzhou
 #########################################
 # home
 #########################################
